tests/snapshots/regression/nested__deep_parens.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/nested/deep_parens.flx
exit_code: 1

--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> tests/fixtures/nested/deep_parens.flx:1:1
  |
1 | print(((((1 + 2) * 3) - 4) / 5) == 0);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | -------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> tests/fixtures/nested/deep_parens.flx:1:1
  |
1 | print(((((1 + 2) * 3) - 4) / 5) == 0);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | -------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
